# avplayer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
Test/: decode.cpp  main.cpp  play.cpp
include/: IGLContext.h  IPlaybackListener.h  IPlayer.h  IVideoFilter.h
qt/: Main.cpp  MainWindow.cpp  MainWindow.h
qt/UI/: ControllerWidget.cpp  ControllerWidget.h  PlayerWidget.cpp  PlayerWidget.h
qt/view/: OpenGLView.cpp  OpenGLView.h
src/Core/: SyncNotifier.cpp  SyncNotifier.h  TaskPool.cpp  TaskPool.h
src/Define/: BaseDef.h  FileWriterParameters.h  IAVPacket.h  IAudioSamples.h  IVideoFrame.h
src/Engine/: AVSynchronizer.cpp  AVSynchronizer.h  AudioPipeline.cpp  AudioPipeline.h  AudioSpeaker.cpp  AudioSpeaker.h  GLContext.cpp  Player.cpp  Player.h  VideoDisplayView.cpp  VideoDisplayView.h  VideoPipeline.cpp  VideoPipeline.h
src/Interface/: IAudioPipeline.h  IAudioSpeaker.h  IFileReader.h  IFileWriter.h  IVideoDisplayView.h  IVideoPipeline.h
src/Reader/: AudioDecoder.cpp  AudioDecoder.h  DeMuxer.cpp  DeMuxer.h  FileReader.cpp  FileReader.h  VideoDecoder.cpp  VideoDecoder.h
src/Reader/Interface/: IAudioDecoder.h  IDeMuxer.h  IVideoDecoder.h
src/Test/: decode.cpp
src/Utils/: GLUtils.cpp  GLUtils.h
src/VideoFilter/: FlipVerticalFilter.cpp  FlipVerticalFilter.h  GrayFilter.cpp  GrayFilter.h  InvertFilter.cpp  InvertFilter.h  StickerFilter.cpp  StickerFilter.h  VideoFilter.cpp  VideoFilter.h
src/Writer/: AudioEncoder.cpp  AudioEncoder.h  FileWriter.cpp  FileWriter.h  Muxer.cpp  Muxer.h  VideoEncoder.cpp  VideoEncoder.h
src/Writer/Interface/: IAudioEncoder.h  IMuxer.h  IVideoEncoder.h
